--- a/vercel.json
+++ b/vercel.json
@@ -9,25 +9,18 @@
       }
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "source": "/api/:match*",
+      "destination": "/api/:match*"
     },
     {
-      "handle": "filesystem"
+      "source": "/admin/:match*",
+      "destination": "/index.html"
     },
     {
-      "src": "/admin",
-      "dest": "/index.html"
-    },
-    {
-      "src": "/admin/(.*)",
-      "dest": "/index.html"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.html"
+      "source": "/:match*",
+      "destination": "/index.html"
     }
   ],
   "headers": [
@@ -57,5 +50,7 @@
         }
       ]
     }
-  ]
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
 }
